# TS-CAS

./: .directory  .gitignore  .prettierignore  .prettierrc  CREDITS.md  Design.gaphor  ExpressionTestPageLoader.ts  InputParseTestPage.ts  LICENSE.md  PrimaryPageLoader.ts  README.md  README.txt  SolverPageLoader.ts  expressionTestPage.html  forge.config.ts  index.js  input_parse_test_page.html  integrator.html  jest.config.js  main.ts  package-lock.json  package.json  solver.html  tags  test.html  tsconfig.json  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.electron.js  webpack.main.config.ts  webpack.prod.js
cas/: Cargo.toml  README.md
cas-wasm-wrapper/: Cargo.toml
cas-wasm-wrapper/src/: lib.rs
cas/src/: argument.rs  cmd_line.rs  convenience_expressions.rs  derivation_rules.rs  deriver.rs  equivalence_disbatchers.rs  expressions.rs  graph.rs  graph_traversal.rs  lib.rs  mathxml.rs  optimization_profiles.rs
cas/src/derivation_rules/: add_fractions.rs  additive_identity.rs  anything_times_zero.rs  associative_property.rs  cancel_negatives.rs  cancel_trig_arcs.rs  cancel_trig_inverses.rs  combine_common_factors.rs  derivative_constant_coefficients.rs  derivative_of_constant.rs  derivative_of_negation.rs  derivative_of_power.rs  derivative_of_product.rs  derivative_of_sum.rs  derivative_of_trig.rs  derivatives.rs  distributive_property.rs  divide_fractions.rs  division_identity.rs  evaluate_exponents.rs  evaluate_fractions.rs  evaluate_logs.rs  evaluate_products.rs  evaluate_sums.rs  exponent_to_zero.rs  foil.rs  fractions_in_denominator.rs  helpers.rs  imaginary_identity.rs  inline_substitutions.rs  integral_chain_rule.rs  integral_constant_coefficients.rs  integral_of_constant.rs  integral_of_negative_one.rs  integral_of_trig.rs  integral_pull_out_negative.rs  integral_sum_rule.rs  integral_to_natural_log.rs  integrate_arctrig.rs  integration_by_substitution.rs  (+20 more)
cas/src/expressions/: absolute_value.rs  constant.rs  derivative.rs  exponent.rs  fraction.rs  integer.rs  integral.rs  logarithm.rs  negation.rs  product.rs  read_from_json.rs  substitution.rs  sum.rs  trig_expression.rs  undefined.rs  variable.rs
cas/tests/: cancel_negatives.rs  expression_simplification.rs  graph.rs  test_data.json
cas/tests/common/: mod.rs
doc/: Before_Commiting.md  CAS_Design_Requirements.md  (+19 more)
wasm-wrapper/: Cargo.toml
wasm-wrapper/src/: lib.rs
(+349 files in other folders)
