[package]
name = "cas-wasm-wrapper"
description = "Wrapper library for the CAS core logic. Adds WASM support."
version = "0.1.0"
edition = "2021"

# For WebAssembly compilation target
[lib]
crate-type = ["cdylib"]

[dependencies]
cas = { path = "../cas" }
js-sys = "0.3.69"
wasm-bindgen = "0.2.90"

[dependencies.web-sys]
version = "0.3.4"
features = [
	'console',
	'Document',
	'HtmlElement',
	'HtmlInputElement',
	'MessageEvent',
	'Window',
	'Worker',
]
