[package]
name = "cas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# For WebAssembly compilation target
[lib]
crate-type = ["cdylib"]

[dependencies]
petgraph = "0.6.4"
wasm-bindgen = "0.2.90"
once_cell = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
