[package]
name = "cas"
description = "A computer algebra library specializing in intagration."
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cmd"
path = "src/cmd_line.rs"

[dependencies]
petgraph = "0.6.4"
once_cell = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.82"
