[package]
name = "cas-wasm-wrapper"
description = "Wrapper library for the CAS core logic. Adds WASM support."
version = "0.1.0"
edition = "2021"

# For WebAssembly compilation target
[lib]
crate-type = ["cdylib"]

[dependencies]
ihateintegrals = { path = "../ihateintegrals" }
js-sys = "0.3.69"
serde_json = "1.0.116"
wasm-bindgen = "0.2.90"

[dependencies.web-sys]
version = "0.3.4"
features = [
	'console',
	'Document',
	'HtmlElement',
	'HtmlInputElement',
	'MessageEvent',
	'Window',
	'Worker',
]
